--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -132,4 +132,6 @@ canvas {
     padding: 15px;
     margin: 20px auto;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+    width: 100% !important;
+    height: 300px !important;  /* Make sure there is enough space */
 }
